1999-09-09  Vincent Renardias <vincent@ldsol.com>

	* libgnomeui/gnome_segv.c: i18n the URL of the Crash page too.
	  Added a comment for translators too.

1999-09-22  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas.c (do_update): Moved updated functionality to here.
	(idle_handler): Do GDK_THREADS_ENTER/LEAVE() here, and call do_update().
	(gnome_canvas_update_now): Call do_update(), not idle_handler().

	Patch from Owen Taylor (otaylor@redhat.com) to fix deadlock when
	using threads.

1999-09-20  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-propertybox.c (gnome_property_box_init): Make
	(gnome_property_box_init): Set the `OK' button as the default one,
	and do not set it insensitive anymore.
	(set_sensitive): Do not change sensitivity of the `OK' button
	anymore.
	(dialog_clicked_cb): Check the dirty flag for the current page.
	If the page is not dirty, just close instead of applying and
	closing: this makes sure the old behavior is preserved even if now
	OK is no longer insensitive when the page is not dirty.

1999-09-20  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas-rect-ellipse.c (gnome_canvas_re_unrealize): Set the
	gc fields to NULL after unrefing them.  Thanks to Damon Chaplin
	for pointing this out.

	* gnome-canvas-text.c (gnome_canvas_text_unrealize): Likewise.

	* gnome-canvas-polygon.c (gnome_canvas_polygon_unrealize): Likewise.

	* gnome-canvas-line.c (gnome_canvas_line_unrealize): Likewise.

	* gnome-canvas-image.c (gnome_canvas_image_unrealize): Likewise.

1999-09-19  Owen Taylor  <otaylor@redhat.com>

	* gnome-dock-band.c: Don't size-allocate non-visible
	children, since we don't size-request them. This will
	avoid problems with warnings since otherwise we
	will allocating the children with junk allocations.

1999-09-20  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-appbar.c (gnome_appbar_construct): Put alignment back in
	so that the label is still left-aligned.
